Fix appointment scheduler size on mobile

--- a/css/appointments.css
+++ b/css/appointments.css
@@ -42,8 +42,8 @@
     top: 3.75em;
     left: 0;
     right: 0;
-    bottom: 0;
-    height: calc(100vh - 3.75em) !important;
+    bottom: 5em;
+    height: calc(100vh - 8.75em) !important;
     min-height: 0 !important;
   }
 }
